--- a/July2020/ProsdocimiPerugia.tex
+++ b/July2020/ProsdocimiPerugia.tex
@@ -841,7 +841,7 @@ Start any project in a replicable way: literate programming and
 programmatic interfaces In R (and Python) this is increasingly feasible
 
 Slides code at
-\href{www.github.com/ilapros/PerugiaSummerSchool/July2020}{github.com/ilapros}
+\href{https://github.com/ilapros/PerugiaSummerSchool/tree/master/July2020}{github.com/ilapros}
 
 \end{frame}
 
