--- a/July2020/ProsdocimiPerugia.tex
+++ b/July2020/ProsdocimiPerugia.tex
@@ -860,6 +860,7 @@ In R (and Python) this is increasingly feasible.
 
 Slides code at
 \href{https://github.com/ilapros/PerugiaSummerSchool/tree/master/July2020}{github.com/ilapros}
+- done in \href{https://rmarkdown.rstudio.com/}{rmarkdown}
 
 \end{frame}
 
